--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,14 @@ include_directories(${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
-set(CMAKE_C_COMPILER "clang")
-set(CMAKE_CXX_COMPILER "clang++")
+if (${LLVM_PACKAGE_VERSION} VERSION_GREATER_EQUAL 16.0.0)
+  set(CMAKE_C_COMPILER "${LLVM_DIR}/../../../bin/clang")
+  set(CMAKE_CXX_COMPILER "${LLVM_DIR}/../../../bin/clang++")
+else()
+  set(CMAKE_C_COMPILER "clang")
+  set(CMAKE_CXX_COMPILER "clang++")
+endif()
+
 
 if(NOT APPLE)
   add_link_options("-fuse-ld=lld")
